include/El/lapack_like/factor.h

/* Solve linear systems after factorization
   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ */
EL_EXPORT ElError ElSolveAfterLUPartialPiv_s
( ElOrientation orientation, 
  ElConstMatrix_s A, ElConstPermutation P, ElMatrix_s B );
EL_EXPORT ElError ElSolveAfterLUPartialPiv_d
( ElOrientation orientation, 
  ElConstMatrix_d A, ElConstPermutation P, ElMatrix_d B );
EL_EXPORT ElError ElSolveAfterLUPartialPiv_c
( ElOrientation orientation, 
  ElConstMatrix_c A, ElConstPermutation P, ElMatrix_c B );
EL_EXPORT ElError ElSolveAfterLUPartialPiv_z
( ElOrientation orientation, 
  ElConstMatrix_z A, ElConstPermutation P, ElMatrix_z B );
EL_EXPORT ElError ElSolveAfterLUPartialPivDist_s
( ElOrientation orientation, 
  ElConstDistMatrix_s A, ElConstDistPermutation P, ElDistMatrix_s B );
EL_EXPORT ElError ElSolveAfterLUPartialPivDist_d
( ElOrientation orientation, 
  ElConstDistMatrix_d A, ElConstDistPermutation P, ElDistMatrix_d B );
EL_EXPORT ElError ElSolveAfterLUPartialPivDist_c
( ElOrientation orientation, 
  ElConstDistMatrix_c A, ElConstDistPermutation P, ElDistMatrix_c B );
EL_EXPORT ElError ElSolveAfterLUPartialPivDist_z
( ElOrientation orientation, 
  ElConstDistMatrix_z A, ElConstDistPermutation P, ElDistMatrix_z B );
/* Solve linear systems after factorization
   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ */
EL_EXPORT ElError ElSolveAfterLUFullPiv_s
( ElOrientation orientation, ElConstMatrix_s A, 
  ElConstPermutation P, ElConstPermutation Q, ElMatrix_s B );
EL_EXPORT ElError ElSolveAfterLUFullPiv_d
( ElOrientation orientation, ElConstMatrix_d A, 
  ElConstPermutation P, ElConstPermutation Q, ElMatrix_d B );
EL_EXPORT ElError ElSolveAfterLUFullPiv_c
( ElOrientation orientation, ElConstMatrix_c A, 
  ElConstPermutation P, ElConstPermutation Q, ElMatrix_c B );
EL_EXPORT ElError ElSolveAfterLUFullPiv_z
( ElOrientation orientation, ElConstMatrix_z A, 
  ElConstPermutation P, ElConstPermutation Q, ElMatrix_z B );
EL_EXPORT ElError ElSolveAfterLUFullPivDist_s
( ElOrientation orientation, ElConstDistMatrix_s A, 
  ElConstDistPermutation P, ElConstDistPermutation Q, ElDistMatrix_s B );
EL_EXPORT ElError ElSolveAfterLUFullPivDist_d
( ElOrientation orientation, ElConstDistMatrix_d A, 
  ElConstDistPermutation P, ElConstDistPermutation Q, ElDistMatrix_d B );
EL_EXPORT ElError ElSolveAfterLUFullPivDist_c
( ElOrientation orientation, ElConstDistMatrix_c A, 
  ElConstDistPermutation P, ElConstDistPermutation Q, ElDistMatrix_c B );
EL_EXPORT ElError ElSolveAfterLUFullPivDist_z
( ElOrientation orientation, ElConstDistMatrix_z A, 
  ElConstDistPermutation P, ElConstDistPermutation Q, ElDistMatrix_z B );
/* LQ factorization
   ================ */

/* Return the packed LQ factorization 
   ---------------------------------- */
EL_EXPORT ElError ElLQ_s( ElMatrix_s A, ElMatrix_s t, ElMatrix_s d );
EL_EXPORT ElError ElLQ_d( ElMatrix_d A, ElMatrix_d t, ElMatrix_d d );
EL_EXPORT ElError ElLQ_c( ElMatrix_c A, ElMatrix_c t, ElMatrix_s d );
EL_EXPORT ElError ElLQ_z( ElMatrix_z A, ElMatrix_z t, ElMatrix_d d );
EL_EXPORT ElError ElLQDist_s
( ElDistMatrix_s A, ElDistMatrix_s t, ElDistMatrix_s d );
EL_EXPORT ElError ElLQDist_d
( ElDistMatrix_d A, ElDistMatrix_d t, ElDistMatrix_d d );
EL_EXPORT ElError ElLQDist_c
( ElDistMatrix_c A, ElDistMatrix_c t, ElDistMatrix_s d );
EL_EXPORT ElError ElLQDist_z
( ElDistMatrix_z A, ElDistMatrix_z t, ElDistMatrix_d d );
/* Return the explicit LQ factorization 
   ------------------------------------ */
EL_EXPORT ElError ElLQExplicit_s( ElMatrix_s L, ElMatrix_s A );
EL_EXPORT ElError ElLQExplicit_d( ElMatrix_d L, ElMatrix_d A );
EL_EXPORT ElError ElLQExplicit_c( ElMatrix_c L, ElMatrix_c A );
EL_EXPORT ElError ElLQExplicit_z( ElMatrix_z L, ElMatrix_z A );
EL_EXPORT ElError ElLQExplicitDist_s( ElDistMatrix_s L, ElDistMatrix_s A );
EL_EXPORT ElError ElLQExplicitDist_d( ElDistMatrix_d L, ElDistMatrix_d A );
EL_EXPORT ElError ElLQExplicitDist_c( ElDistMatrix_c L, ElDistMatrix_c A );
EL_EXPORT ElError ElLQExplicitDist_z( ElDistMatrix_z L, ElDistMatrix_z A );
/* Only return the triangular factor, L
   ------------------------------------ */
EL_EXPORT ElError ElLQExplicitTriang_s( ElMatrix_s A );
EL_EXPORT ElError ElLQExplicitTriang_d( ElMatrix_d A );
EL_EXPORT ElError ElLQExplicitTriang_c( ElMatrix_c A );
EL_EXPORT ElError ElLQExplicitTriang_z( ElMatrix_z A );
EL_EXPORT ElError ElLQExplicitTriangDist_s( ElDistMatrix_s A );
EL_EXPORT ElError ElLQExplicitTriangDist_d( ElDistMatrix_d A );
EL_EXPORT ElError ElLQExplicitTriangDist_c( ElDistMatrix_c A );
EL_EXPORT ElError ElLQExplicitTriangDist_z( ElDistMatrix_z A );
/* Only return the unitary factor, Q
   --------------------------------- */
EL_EXPORT ElError ElLQExplicitUnitary_s( ElMatrix_s A );
EL_EXPORT ElError ElLQExplicitUnitary_d( ElMatrix_d A );
EL_EXPORT ElError ElLQExplicitUnitary_c( ElMatrix_c A );
EL_EXPORT ElError ElLQExplicitUnitary_z( ElMatrix_z A );
EL_EXPORT ElError ElLQExplicitUnitaryDist_s( ElDistMatrix_s A );
EL_EXPORT ElError ElLQExplicitUnitaryDist_d( ElDistMatrix_d A );
EL_EXPORT ElError ElLQExplicitUnitaryDist_c( ElDistMatrix_c A );
EL_EXPORT ElError ElLQExplicitUnitaryDist_z( ElDistMatrix_z A );
/* Apply Q from an LQ factorization to vectors
   ------------------------------------------- */
EL_EXPORT ElError ElApplyQAfterLQ_s
( ElLeftOrRight side, ElOrientation orientation, 
  ElConstMatrix_s A, ElConstMatrix_s t, 
  ElConstMatrix_s d, ElMatrix_s B );
EL_EXPORT ElError ElApplyQAfterLQ_d
( ElLeftOrRight side, ElOrientation orientation, 
  ElConstMatrix_d A, ElConstMatrix_d t, 
  ElConstMatrix_d d, ElMatrix_d B );
EL_EXPORT ElError ElApplyQAfterLQ_c
( ElLeftOrRight side, ElOrientation orientation, 
  ElConstMatrix_c A, ElConstMatrix_c t, 
  ElConstMatrix_s d, ElMatrix_c B );
EL_EXPORT ElError ElApplyQAfterLQ_z
( ElLeftOrRight side, ElOrientation orientation, 
  ElConstMatrix_z A, ElConstMatrix_z t, 
  ElConstMatrix_d d, ElMatrix_z B );
EL_EXPORT ElError ElApplyQAfterLQDist_s
( ElLeftOrRight side, ElOrientation orientation, 
  ElConstDistMatrix_s A, ElConstDistMatrix_s t, 
  ElConstDistMatrix_s d, ElDistMatrix_s B );
EL_EXPORT ElError ElApplyQAfterLQDist_d
( ElLeftOrRight side, ElOrientation orientation, 
  ElConstDistMatrix_d A, ElConstDistMatrix_d t, 
  ElConstDistMatrix_d d, ElDistMatrix_d B );
EL_EXPORT ElError ElApplyQAfterLQDist_c
( ElLeftOrRight side, ElOrientation orientation, 
  ElConstDistMatrix_c A, ElConstDistMatrix_c t, 
  ElConstDistMatrix_s d, ElDistMatrix_c B );
EL_EXPORT ElError ElApplyQAfterLQDist_z
( ElLeftOrRight side, ElOrientation orientation, 
  ElConstDistMatrix_z A, ElConstDistMatrix_z t, 
  ElConstDistMatrix_d d, ElDistMatrix_z B );
/* Solve against vectors after an LQ factorization
   ----------------------------------------------- */
EL_EXPORT ElError ElSolveAfterLQ_s
( ElOrientation orientation, ElConstMatrix_s A, ElConstMatrix_s t, 
  ElConstMatrix_s d, ElConstMatrix_s B, ElMatrix_s X );
EL_EXPORT ElError ElSolveAfterLQ_d
( ElOrientation orientation, ElConstMatrix_d A, ElConstMatrix_d t, 
  ElConstMatrix_d d, ElConstMatrix_d B, ElMatrix_d X );
EL_EXPORT ElError ElSolveAfterLQ_c
( ElOrientation orientation, ElConstMatrix_c A, ElConstMatrix_c t, 
  ElConstMatrix_s d, ElConstMatrix_c B, ElMatrix_c X );
EL_EXPORT ElError ElSolveAfterLQ_z
( ElOrientation orientation, ElConstMatrix_z A, ElConstMatrix_z t, 
  ElConstMatrix_d d, ElConstMatrix_z B, ElMatrix_z X );
EL_EXPORT ElError ElSolveAfterLQDist_s
( ElOrientation orientation, ElConstDistMatrix_s A, ElConstDistMatrix_s t, 
  ElConstDistMatrix_s d, ElConstDistMatrix_s B, ElDistMatrix_s X );
EL_EXPORT ElError ElSolveAfterLQDist_d
( ElOrientation orientation, ElConstDistMatrix_d A, ElConstDistMatrix_d t, 
  ElConstDistMatrix_d d, ElConstDistMatrix_d B, ElDistMatrix_d X );
EL_EXPORT ElError ElSolveAfterLQDist_c
( ElOrientation orientation, ElConstDistMatrix_c A, ElConstDistMatrix_c t, 
  ElConstDistMatrix_s d, ElConstDistMatrix_c B, ElDistMatrix_c X );
EL_EXPORT ElError ElSolveAfterLQDist_z
( ElOrientation orientation, ElConstDistMatrix_z A, ElConstDistMatrix_z t, 
  ElConstDistMatrix_d d, ElConstDistMatrix_z B, ElDistMatrix_z X );
/* QR factorization
   ================ */

typedef struct 
{
    bool colPiv;

    bool boundRank;
    ElInt maxRank;
    
    bool adaptive;
    float tol;

    bool alwaysRecomputeNorms;    

    /* TODO: Add Chan ratio */

    bool smallestFirst;
} ElQRCtrl_s;
EL_EXPORT ElError ElQRCtrlDefault_s( ElQRCtrl_s* ctrl );
typedef struct 
{
    bool colPiv;

    bool boundRank;
    ElInt maxRank;
    
    bool adaptive;
    double tol;

    bool alwaysRecomputeNorms;    

    /* TODO: Add Chan ratio */
    bool smallestFirst;
} ElQRCtrl_d;
EL_EXPORT ElError ElQRCtrlDefault_d( ElQRCtrl_d* ctrl );
/* Return the packed QR factorization (with no pivoting)
   ----------------------------------------------------- */
EL_EXPORT ElError ElQR_s( ElMatrix_s A, ElMatrix_s t, ElMatrix_s d );
EL_EXPORT ElError ElQR_d( ElMatrix_d A, ElMatrix_d t, ElMatrix_d d );
EL_EXPORT ElError ElQR_c( ElMatrix_c A, ElMatrix_c t, ElMatrix_s d );
EL_EXPORT ElError ElQR_z( ElMatrix_z A, ElMatrix_z t, ElMatrix_d d );
EL_EXPORT ElError ElQRDist_s
( ElDistMatrix_s A, ElDistMatrix_s t, ElDistMatrix_s d );
EL_EXPORT ElError ElQRDist_d
( ElDistMatrix_d A, ElDistMatrix_d t, ElDistMatrix_d d );
EL_EXPORT ElError ElQRDist_c
( ElDistMatrix_c A, ElDistMatrix_c t, ElDistMatrix_s d );
EL_EXPORT ElError ElQRDist_z
( ElDistMatrix_z A, ElDistMatrix_z t, ElDistMatrix_d d );
/* Return the packed QR factorization (with column pivoting)
   --------------------------------------------------------- */
EL_EXPORT ElError ElQRColPiv_s
( ElMatrix_s A, ElMatrix_s t, ElMatrix_s d, ElPermutation Omega );
EL_EXPORT ElError ElQRColPiv_d
( ElMatrix_d A, ElMatrix_d t, ElMatrix_d d, ElPermutation Omega );
EL_EXPORT ElError ElQRColPiv_c
( ElMatrix_c A, ElMatrix_c t, ElMatrix_s d, ElPermutation Omega );
EL_EXPORT ElError ElQRColPiv_z
( ElMatrix_z A, ElMatrix_z t, ElMatrix_d d, ElPermutation Omega );
EL_EXPORT ElError ElQRColPivDist_s
( ElDistMatrix_s A, ElDistMatrix_s t, ElDistMatrix_s d,
  ElDistPermutation Omega );
EL_EXPORT ElError ElQRColPivDist_d
( ElDistMatrix_d A, ElDistMatrix_d t, ElDistMatrix_d d,
  ElDistPermutation Omega );
EL_EXPORT ElError ElQRColPivDist_c
( ElDistMatrix_c A, ElDistMatrix_c t, ElDistMatrix_s d,
  ElDistPermutation Omega );
EL_EXPORT ElError ElQRColPivDist_z
( ElDistMatrix_z A, ElDistMatrix_z t, ElDistMatrix_d d,
  ElDistPermutation Omega );
/* Return the triangular factor from QR with no pivoting
   ----------------------------------------------------- */
EL_EXPORT ElError ElQRExplicitTriang_s( ElMatrix_s A );
EL_EXPORT ElError ElQRExplicitTriang_d( ElMatrix_d A );
EL_EXPORT ElError ElQRExplicitTriang_c( ElMatrix_c A );
EL_EXPORT ElError ElQRExplicitTriang_z( ElMatrix_z A );
EL_EXPORT ElError ElQRExplicitTriangDist_s( ElDistMatrix_s A );
EL_EXPORT ElError ElQRExplicitTriangDist_d( ElDistMatrix_d A );
EL_EXPORT ElError ElQRExplicitTriangDist_c( ElDistMatrix_c A );
EL_EXPORT ElError ElQRExplicitTriangDist_z( ElDistMatrix_z A );
/* Return the unitary factor from QR 
   --------------------------------- */
EL_EXPORT ElError ElQRExplicitUnitary_s( ElMatrix_s A );
EL_EXPORT ElError ElQRExplicitUnitary_d( ElMatrix_d A );
EL_EXPORT ElError ElQRExplicitUnitary_c( ElMatrix_c A );
EL_EXPORT ElError ElQRExplicitUnitary_z( ElMatrix_z A );
EL_EXPORT ElError ElQRExplicitUnitaryDist_s( ElDistMatrix_s A );
EL_EXPORT ElError ElQRExplicitUnitaryDist_d( ElDistMatrix_d A );
EL_EXPORT ElError ElQRExplicitUnitaryDist_c( ElDistMatrix_c A );
EL_EXPORT ElError ElQRExplicitUnitaryDist_z( ElDistMatrix_z A );
/* Expert version
   ^^^^^^^^^^^^^^ */
/* TODO */

/* Return the explicit Q and R 
   --------------------------- */
EL_EXPORT ElError ElQRExplicit_s( ElMatrix_s A, ElMatrix_s R );
EL_EXPORT ElError ElQRExplicit_d( ElMatrix_d A, ElMatrix_d R );
EL_EXPORT ElError ElQRExplicit_c( ElMatrix_c A, ElMatrix_c R );
EL_EXPORT ElError ElQRExplicit_z( ElMatrix_z A, ElMatrix_z R );
EL_EXPORT ElError ElQRExplicitDist_s( ElDistMatrix_s A, ElDistMatrix_s R );
EL_EXPORT ElError ElQRExplicitDist_d( ElDistMatrix_d A, ElDistMatrix_d R );
EL_EXPORT ElError ElQRExplicitDist_c( ElDistMatrix_c A, ElDistMatrix_c R );
EL_EXPORT ElError ElQRExplicitDist_z( ElDistMatrix_z A, ElDistMatrix_z R );