python/lapack_like/factor.py


lib.ElSolveAfterLUPartialPiv_s.argtypes = \
lib.ElSolveAfterLUPartialPiv_d.argtypes = \
lib.ElSolveAfterLUPartialPiv_c.argtypes = \
lib.ElSolveAfterLUPartialPiv_z.argtypes = \
lib.ElSolveAfterLUPartialPivDist_d.argtypes = \
lib.ElSolveAfterLUPartialPivDist_c.argtypes = \
lib.ElSolveAfterLUPartialPivDist_z.argtypes = \
  [c_uint,c_void_p,c_void_p,c_void_p]

def SolveAfterLUPartialPiv(orient,A,P,B):
  if type(A) is not type(B):
    raise Exception('Types of {A,B} must match')
  if A.tag != B.tag:
    raise Exception('Datatypes of A and B must match')
  args = [orient,A.obj,P.obj,B.obj]
  if type(A) is Matrix:
    if type(P) is not Permutation:
      raise Exception('Expected P to be a Permutation')
    if   A.tag == sTag: lib.ElSolveAfterLUPartialPiv_s(*args)
    elif A.tag == dTag: lib.ElSolveAfterLUPartialPiv_d(*args)
    elif A.tag == cTag: lib.ElSolveAfterLUPartialPiv_c(*args)
    elif A.tag == zTag: lib.ElSolveAfterLUPartialPiv_z(*args)
    else: DataExcept()
  elif type(A) is DistMatrix:
    if type(P) is not DistPermutation:
      raise Exception('Expected P to be a DistPermutation')
    if   A.tag == sTag: lib.ElSolveAfterLUPartialPivDist_s(*args)
    elif A.tag == dTag: lib.ElSolveAfterLUPartialPivDist_d(*args)
    elif A.tag == cTag: lib.ElSolveAfterLUPartialPivDist_c(*args)
    elif A.tag == zTag: lib.ElSolveAfterLUPartialPivDist_z(*args)
    else: DataExcept()
  else: TypeExcept()

lib.ElSolveAfterLUFullPiv_s.argtypes = \
lib.ElSolveAfterLUFullPiv_d.argtypes = \
lib.ElSolveAfterLUFullPiv_c.argtypes = \
lib.ElSolveAfterLUFullPiv_z.argtypes = \
lib.ElSolveAfterLUFullPivDist_d.argtypes = \
lib.ElSolveAfterLUFullPivDist_c.argtypes = \
lib.ElSolveAfterLUFullPivDist_z.argtypes = \
  [c_uint,c_void_p,c_void_p,c_void_p,c_void_p]

def SolveAfterLUFullPiv(orient,A,P,Q,B):
  if type(A) is not type(B):
    raise Exception('Types of A and B must match')
  if A.tag != B.tag:
    raise Exception('Datatypes of A and B must match')
  args = [orient,A.obj,P.obj,Q.obj,B.obj]
  if type(A) is Matrix:
    if type(P) is not Permutation or type(Q) is not Permutation:
      raise Exception('Expected P and Q to be Permutations')
    if   A.tag == sTag: lib.ElSolveAfterLUFullPiv_s(*args)
    elif A.tag == dTag: lib.ElSolveAfterLUFullPiv_d(*args)
    elif A.tag == cTag: lib.ElSolveAfterLUFullPiv_c(*args)
    elif A.tag == zTag: lib.ElSolveAfterLUFullPiv_z(*args)
    else: DataExcept()
  elif type(A) is DistMatrix:
    if type(P) is not DistPermutation or type(Q) is not DistPermutation:
      raise Exception('Expected P and Q to be DistPermutations')
    if   A.tag == sTag: lib.ElSolveAfterLUFullPivDist_s(*args)
    elif A.tag == dTag: lib.ElSolveAfterLUFullPivDist_d(*args)
    elif A.tag == cTag: lib.ElSolveAfterLUFullPivDist_c(*args)
    elif A.tag == zTag: lib.ElSolveAfterLUFullPivDist_z(*args)
    else: DataExcept()
  else: TypeExcept()

# LQ factorization
# ================
(LQ_IMPLICIT,LQ_EXPLICIT,LQ_EXPLICIT_TRIANG,LQ_EXPLICIT_UNITARY)=(0,1,2,3)

lib.ElLQ_s.argtypes = \
lib.ElLQ_d.argtypes = \
lib.ElLQ_c.argtypes = \
lib.ElLQ_z.argtypes = \
lib.ElLQDist_s.argtypes = \
lib.ElLQDist_d.argtypes = \
lib.ElLQDist_c.argtypes = \
lib.ElLQDist_z.argtypes = \
  [c_void_p,c_void_p,c_void_p]

lib.ElLQExplicit_s.argtypes = \
lib.ElLQExplicit_d.argtypes = \
lib.ElLQExplicit_c.argtypes = \
lib.ElLQExplicit_z.argtypes = \
lib.ElLQExplicitDist_s.argtypes = \
lib.ElLQExplicitDist_d.argtypes = \
lib.ElLQExplicitDist_c.argtypes = \
lib.ElLQExplicitDist_z.argtypes = \
  [c_void_p,c_void_p]

lib.ElLQExplicitUnitary_s.argtypes = \
lib.ElLQExplicitUnitary_d.argtypes = \
lib.ElLQExplicitUnitary_c.argtypes = \
lib.ElLQExplicitUnitary_z.argtypes = \
lib.ElLQExplicitUnitaryDist_s.argtypes = \
lib.ElLQExplicitUnitaryDist_d.argtypes = \
lib.ElLQExplicitUnitaryDist_c.argtypes = \
lib.ElLQExplicitUnitaryDist_z.argtypes = \
lib.ElLQExplicitTriang_s.argtypes = \
lib.ElLQExplicitTriang_d.argtypes = \
lib.ElLQExplicitTriang_c.argtypes = \
lib.ElLQExplicitTriang_z.argtypes = \
lib.ElLQExplicitTriangDist_s.argtypes = \
lib.ElLQExplicitTriangDist_d.argtypes = \
lib.ElLQExplicitTriangDist_c.argtypes = \
lib.ElLQExplicitTriangDist_z.argtypes = \
  [c_void_p]

def LQ(A,factType=LQ_IMPLICIT):
  if type(A) is Matrix:
    if factType == LQ_IMPLICIT:
      t = Matrix(A.tag)
      d = Matrix(Base(A.tag))
      args = [A.obj,t.obj,d.obj]
      if   A.tag == sTag: lib.ElLQ_s(*args)
      elif A.tag == dTag: lib.ElLQ_d(*args)
      elif A.tag == cTag: lib.ElLQ_c(*args)
      elif A.tag == zTag: lib.ElLQ_z(*args)
      else: DataExcept()
      return t, d
    elif factType == LQ_EXPLICIT:
      L = Matrix(A.tag)
      args = [L.obj,A.obj]
      if   A.tag == sTag: lib.ElLQExplicit_s(*args)
      elif A.tag == dTag: lib.ElLQExplicit_d(*args)
      elif A.tag == cTag: lib.ElLQExplicit_c(*args)
      elif A.tag == zTag: lib.ElLQExplicit_z(*args)
      else: DataExcept()
      return L
    elif factType == LQ_EXPLICIT_UNITARY:
      args = [A.obj]
      if   A.tag == sTag: lib.ElLQExplicitUnitary_s(*args)
      elif A.tag == dTag: lib.ElLQExplicitUnitary_d(*args)
      elif A.tag == cTag: lib.ElLQExplicitUnitary_c(*args)
      elif A.tag == zTag: lib.ElLQExplicitUnitary_z(*args)
      else: DataExcept()
    elif factType == LQ_EXPLICIT_TRIANG:
      args = [A.obj]
      if   A.tag == sTag: lib.ElLQExplicitTriang_s(*args)
      elif A.tag == dTag: lib.ElLQExplicitTriang_d(*args)
      elif A.tag == cTag: lib.ElLQExplicitTriang_c(*args)
      elif A.tag == zTag: lib.ElLQExplicitTriang_z(*args)
      else: DataExcept()
    else: raise Exception('Unsupported LQ factorization type')
  elif type(A) is DistMatrix:
    if factType == LQ_IMPLICIT:
      t = DistMatrix(A.tag,MC,STAR,A.Grid())
      d = DistMatrix(Base(A.tag),MC,STAR,A.Grid())
      args = [A.obj,t.obj,d.obj]
      if   A.tag == sTag: lib.ElLQDist_s(*args)
      elif A.tag == dTag: lib.ElLQDist_d(*args)
      elif A.tag == cTag: lib.ElLQDist_c(*args)
      elif A.tag == zTag: lib.ElLQDist_z(*args)
      else: DataExcept()
      return t, d
    elif factType == LQ_EXPLICIT:
      L = DistMatrix(A.tag,MC,MR,A.Grid())
      args = [L.obj,A.obj]
      if   A.tag == sTag: lib.ElLQExplicitDist_s(*args)
      elif A.tag == dTag: lib.ElLQExplicitDist_d(*args)
      elif A.tag == cTag: lib.ElLQExplicitDist_c(*args)
      elif A.tag == zTag: lib.ElLQExplicitDist_z(*args)
      else: DataExcept()
      return L
    elif factType == LQ_EXPLICIT_UNITARY:
      args = [A.obj]
      if   A.tag == sTag: lib.ElLQExplicitUnitaryDist_s(*args)
      elif A.tag == dTag: lib.ElLQExplicitUnitaryDist_d(*args)
      elif A.tag == cTag: lib.ElLQExplicitUnitaryDist_c(*args)
      elif A.tag == zTag: lib.ElLQExplicitUnitaryDist_z(*args)
      else: DataExcept()
    elif factType == LQ_EXPLICIT_TRIANG:
      args = [A.obj]
      if   A.tag == sTag: lib.ElLQExplicitTriangDist_s(*args)
      elif A.tag == dTag: lib.ElLQExplicitTriangDist_d(*args)
      elif A.tag == cTag: lib.ElLQExplicitTriangDist_c(*args)
      elif A.tag == zTag: lib.ElLQExplicitTriangDist_z(*args)
      else: DataExcept()
    else: raise Exception('Unsupported LQ factorization type')
  else: TypeExcept()

lib.ElApplyQAfterLQ_s.argtypes = \
lib.ElApplyQAfterLQ_d.argtypes = \
lib.ElApplyQAfterLQ_c.argtypes = \
lib.ElApplyQAfterLQ_z.argtypes = \
lib.ElApplyQAfterLQDist_s.argtypes = \
lib.ElApplyQAfterLQDist_d.argtypes = \
lib.ElApplyQAfterLQDist_c.argtypes = \
lib.ElApplyQAfterLQDist_z.argtypes = \
  [c_uint,c_uint,c_void_p,c_void_p,c_void_p,c_void_p]

def ApplyQAfterLQ(side,orient,A,t,d,B):
  if type(A) is not type(t) or type(t) is not type(d) or type(d) is not type(B):
    raise Exception('Matrix types of {A,t,d,B} must match')
  if A.tag != t.tag or t.tag != B.tag or d.tag != Base(A.tag):
    raise Exception('Datatypes of {A,t,B} must match and d must have base type')
  args = [side,orient,A.obj,t.obj,d.obj,B.obj]
  if type(A) is Matrix:
    if   A.tag == sTag: lib.ElApplyQAfterLQ_s(*args)
    elif A.tag == dTag: lib.ElApplyQAfterLQ_d(*args)
    elif A.tag == cTag: lib.ElApplyQAfterLQ_c(*args)
    elif A.tag == zTag: lib.ElApplyQAfterLQ_z(*args)
    else: DataExcept()
  elif type(A) is DistMatrix:
    if   A.tag == sTag: lib.ElApplyQAfterLQDist_s(*args)
    elif A.tag == dTag: lib.ElApplyQAfterLQDist_d(*args)
    elif A.tag == cTag: lib.ElApplyQAfterLQDist_c(*args)
    elif A.tag == zTag: lib.ElApplyQAfterLQDist_z(*args)
    else: DataExcept()
  else: TypeExcept()

lib.ElSolveAfterLQ_s.argtypes = \
lib.ElSolveAfterLQ_d.argtypes = \
lib.ElSolveAfterLQ_c.argtypes = \
lib.ElSolveAfterLQ_z.argtypes = \
lib.ElSolveAfterLQDist_s.argtypes = \
lib.ElSolveAfterLQDist_d.argtypes = \
lib.ElSolveAfterLQDist_c.argtypes = \
lib.ElSolveAfterLQDist_z.argtypes = \
  [c_uint,c_void_p,c_void_p,c_void_p,c_void_p,c_void_p]

def SolveAfterLQ(orient,A,t,d,B):
  if type(A) is Matrix:
    X = Matrix(A.tag)
    args = [orient,A.obj,t.obj,d.obj,B.obj,X.obj]
    if   A.tag == sTag: lib.ElSolveAfterLQ_s(*args)
    elif A.tag == dTag: lib.ElSolveAfterLQ_d(*args)
    elif A.tag == cTag: lib.ElSolveAfterLQ_c(*args)
    elif A.tag == zTag: lib.ElSolveAfterLQ_z(*args)
    else: DataExcept()
    return X
  elif type(A) is DistMatrix:
    X = DistMatrix(A.tag,MC,MR,A.Grid())
    args = [orient,A.obj,t.obj,d.obj,B.obj,X.obj]
    if   A.tag == sTag: lib.ElSolveAfterLQDist_s(*args)
    elif A.tag == dTag: lib.ElSolveAfterLQDist_d(*args)
    elif A.tag == cTag: lib.ElSolveAfterLQDist_c(*args)
    elif A.tag == zTag: lib.ElSolveAfterLQDist_z(*args)
    else: DataExcept()
    return X
  else: TypeExcept()

# QR factorization
# ================
lib.ElQRCtrlDefault_s.argtypes = \
lib.ElQRCtrlDefault_d.argtypes = \
  [c_void_p]
class QRCtrl_s(ctypes.Structure):
  _fields_ = [("colPiv",bType),("boundRank",bType),("maxRank",iType),
              ("adaptive",bType),("tol",sType),("alwaysRecomputeNorms",bType),
              ("smallestFirst",bType)]
  def __init__(self):
    lib.ElQRCtrlDefault_s(pointer(self))
class QRCtrl_d(ctypes.Structure):
  _fields_ = [("colPiv",bType),("boundRank",bType),("maxRank",iType),
              ("adaptive",bType),("tol",dType),("alwaysRecomputeNorms",bType),
              ("smallestFirst",bType)]
  def __init__(self):
    lib.ElQRCtrlDefault_d(pointer(self))

(QR_IMPLICIT,QR_EXPLICIT,QR_EXPLICIT_TRIANG,QR_EXPLICIT_UNITARY)=(0,1,2,3)

lib.ElQR_s.argtypes = \
lib.ElQR_d.argtypes = \
lib.ElQR_c.argtypes = \
lib.ElQR_z.argtypes = \
lib.ElQRDist_s.argtypes = \
lib.ElQRDist_d.argtypes = \
lib.ElQRDist_c.argtypes = \
lib.ElQRDist_z.argtypes = \
  [c_void_p,c_void_p,c_void_p]

lib.ElQRExplicit_s.argtypes = \
lib.ElQRExplicit_d.argtypes = \
lib.ElQRExplicit_c.argtypes = \
lib.ElQRExplicit_z.argtypes = \
lib.ElQRExplicitDist_s.argtypes = \
lib.ElQRExplicitDist_d.argtypes = \
lib.ElQRExplicitDist_c.argtypes = \
lib.ElQRExplicitDist_z.argtypes = \
  [c_void_p,c_void_p]

lib.ElQRExplicitTriang_s.argtypes = \
lib.ElQRExplicitTriang_d.argtypes = \
lib.ElQRExplicitTriang_c.argtypes = \
lib.ElQRExplicitTriang_z.argtypes = \
lib.ElQRExplicitTriangDist_s.argtypes = \
lib.ElQRExplicitTriangDist_d.argtypes = \
lib.ElQRExplicitTriangDist_c.argtypes = \
lib.ElQRExplicitTriangDist_z.argtypes = \
  [c_void_p]

lib.ElQRExplicitUnitary_s.argtypes = \
lib.ElQRExplicitUnitary_d.argtypes = \
lib.ElQRExplicitUnitary_c.argtypes = \
lib.ElQRExplicitUnitary_z.argtypes = \
lib.ElQRExplicitUnitaryDist_s.argtypes = \
lib.ElQRExplicitUnitaryDist_d.argtypes = \
lib.ElQRExplicitUnitaryDist_c.argtypes = \
lib.ElQRExplicitUnitaryDist_z.argtypes = \
  [c_void_p]

lib.ElQRColPiv_s.argtypes = \
lib.ElQRColPiv_d.argtypes = \
lib.ElQRColPiv_c.argtypes = \
lib.ElQRColPiv_z.argtypes = \
lib.ElQRColPivDist_s.argtypes = \
lib.ElQRColPivDist_d.argtypes = \
lib.ElQRColPivDist_c.argtypes = \
lib.ElQRColPivDist_z.argtypes = \
  [c_void_p,c_void_p,c_void_p,c_void_p]
